--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -1,4 +1,89 @@
 body {
-  background: #fafafa;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+
+main {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  text-align: center;
+  //rain-default
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0.19;
+    transition: background-image 0.4s;
+    background-image: linear-gradient(-180deg, #A2BACB 0%, #9B9B9B 100%);
+    background-image: linear-gradient(-46deg, rgba(3,0,0,0.34) 0%, rgba(255,255,255,0.34) 100%);
+  }
+  //clear day
+  &.code-01d {
+    &:before {
+      opacity: 1;
+      background: #50D2C2;
+      background-image: linear-gradient(-37deg, #FFD5C2 0%, #FFEFDD 100%);
+    }
+  }
+  //clear night
+  &.code-01n {
+    &:before {
+      opacity: 1;
+      background-image: linear-gradient(-225deg, #458ED7 0%, #246EB9 100%);
+      background-image: linear-gradient(-46deg, rgba(3,0,0,0.34) 0%, rgba(255,255,255,0.34) 100%);
+    }
+  }
+  //snow
+  &.code-13d,
+  &.code-13n {
+    &:before {
+      opacity: 0.19;
+      background-image: linear-gradient(-27deg, #55B7FF 0%, #A2A2A2 100%);
+      background-image: linear-gradient(-27deg, #55B7FF 0%, #A2A2A2 100%);
+    }
+  }
+  //lightning
+  &.code-11d,
+  &.code-11n {
+    &:before {
+      opacity: 0.42;
+      background-image: linear-gradient(-134deg, #3023AE 0%, #C86DD7 100%);
+      background-image: linear-gradient(-46deg, rgba(3,0,0,0.34) 0%, rgba(255,255,255,0.34) 100%);
+    }
+  }
+  //cloudy day
+  &.code-02d,
+  &.code-03d {
+    &:before {
+      opacity: 0.19;
+      background: #7689FF;
+      background-image: linear-gradient(-46deg, rgba(3,0,0,0.34) 0%, rgba(255,255,255,0.34) 100%);
+      background-image: linear-gradient(-37deg, #FFD5C2 0%, #FFEFDD 100%);
+    }
+  }
+  //cloudy night
+  &.code-02n,
+  &.code-03n {
+    &:before {
+      opacity: 1;
+      background-image: linear-gradient(-36deg, #1F2D3F 0%, #384B61 100%);
+      background-image: linear-gradient(-46deg, rgba(3,0,0,0.34) 0%, rgba(255,255,255,0.34) 100%);
+    }
+  }
+  //full cloud
+  &.code-04d,
+  &.code-04n {
+    &:before {
+      opacity: 0.19;
+      background: #7689FF;
+      background-image: linear-gradient(-46deg, rgba(3,0,0,0.34) 0%, rgba(255,255,255,0.34) 100%);
+    }
+  }
 }
