--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -17,3 +17,17 @@ body {
   font-weight: $font-weight-normal;
   color: #000;
 }
+.degIcon{
+  font-size: 2.4rem;
+  font-weight: $font-weight-light;
+  vertical-align: super;
+}
+h1{
+  font-weight: $font-weight-bold;
+  font-size: 6.4rem;
+}
+h2{
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 1.8px;
+}
