--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,8 @@
 		<title>Application</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="/images/brellaLogo-192x192.png" />
+		<link rel="icon" type="image/png" sizes="128x128" href="/images/brellaLogo-128x128.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous" />
 	</head>
