--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -25,6 +25,10 @@ body {
 h1{
   font-weight: $font-weight-bold;
   font-size: 6.4rem;
+  &.loadingMsg{
+    margin-top: 200px;
+    font-size: 2.4rem;
+  }
 }
 h2{
   text-transform: uppercase;
